--- a/src/app/components/number-of-clicks/number-of-clicks.component.scss
+++ b/src/app/components/number-of-clicks/number-of-clicks.component.scss
@@ -8,6 +8,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  > p {
+    margin-left: 16px;
+    margin-right: 16px;
+  }
+
 }
 
 app-auth {
@@ -15,5 +21,13 @@ app-auth {
   left: 50%;
   transform: translateX(-50%);
   width: 70%;
+  max-width: 500px;
+
+  @media only screen and (max-width: 600px) {
+    left: 6px;
+    transform: none;
+    width: calc(100% - 16px);
+    max-width: unset;
+  }
 
 }
