--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
-<h1 id="home-title">Welcome to the click counter</h1>
+<h1 id="home-title">Welcome {{getCurrentUsername()}} to the click counter</h1>
 
 <app-number-of-clicks></app-number-of-clicks>
